# criticmarkup

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/criticmarkup/: cli.py
tests/: _helpers.py  test_cli.py  test_cli_errors.py  test_readme_examples.py
