[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "criticmarkup"
version = "0.1.1"
description = "Fast CriticMarkup preprocessor with multiple output formats."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["criticmarkup", "preprocessor", "asciidoc", "markdown", "latex"]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "twine>=5.1.0",
]

[project.scripts]
criticmarkup = "criticmarkup.cli:app"

[project.urls]
Homepage = "https://github.com/mrshu/criticmarkup"
Repository = "https://github.com/mrshu/criticmarkup"
Issues = "https://github.com/mrshu/criticmarkup/issues"
Changelog = "https://github.com/mrshu/criticmarkup/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/criticmarkup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
